@@ -1,3 +1,8 @@
+2004-08-26 nalin
+	* src/password.c(pam_sm_chauthtok): prompt for the user's current
+	password when use_first_pass isn't flagged, ignoring use_authtok
+	during the initial-authentication pass (#130950).
+
 2004-06-14 nalin
 	* src/session.c(pam_sm_open_session,pam_sm_close_session): log what
 	we return, and why, if debugging is enabled.
